<resources>
    <string name="app_name">Hapid</string>
    <string name="splash_line">Find Nearest Local</string>
    <string name="splash_lines">Market</string>
    <string name="best_markitplac">Best Markitplac</string>
    <string name="best_markitplac_discription"><![CDATA[O On-Time Departures. Pay just for your seat. No Refusal from our from our end. Spacious & Comfortable Seating. Female passengers safetly standards. On board Refreshments. Cab Tracking through Maps]]></string>
    <string name="splash_btn_get_started">Get Started</string>
    <string name="login_enter_you_mobile">Enter Your Mobile<br /> Number</string>
    <string name="login_hello_welcome">Hello, Welcome Back To Our Account</string>
    <string name="login_request_otp">Request OTP</string>
    <string name="login_with">Login With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login_term_privacy"><![CDATA[By Creating Passcode You Agree With Our Terms & Conditions And Privacy Policy]]></string>
    <string name="confirmation_code_disc">Your Confimation Code Is Below - Enter It And We\'ll Help You Get Signed In.</string>
    <string name="otp_verfication_code_title">Enter Your Verification Code</string>
    <string name="sub_otp_verfication_code_title">We Have Sent The Code Verification To Your Mobile Number</string>
    <string name="otp_submit">Submit</string>
    <string name="otp_dont_receive_otp">Don\'t Receive OTP? Resend</string>
    <string name="create_profile_title">Create Profile</string>
    <string name="create_profile_set_profile">Set Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="pick_your_current_location">Pick Your Current Location</string>
    <string name="post_code">Post Code</string>
    <string name="select_country_code">Select country code</string>
    <string name="prompt_select_country">Select a country</string>

    <string name="defaulte_mobile_no">00000 00000</string>
    <string name="or">Or</string>
    <string name="select_post_code_address">Select Post Code or Address</string>

</resources>