<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    android:orientation="vertical"
    tools:context=".SplashActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/best_markitplac"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/best_markitplac_discription"
            android:textAlignment="center"
            android:textColor="@color/light_black"
            android:textSize="@dimen/_12sdp"
            app:fontFamily="@font/allerta" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/splash_btn_shape"
            android:padding="@dimen/_15sdp"
            android:text="@string/splash_btn_get_started"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>


</LinearLayout>