<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.CreateProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/light_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_arrow"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_profile_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_pink"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/crdProfile"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/light_pink_v2"
                    app:cardCornerRadius="@dimen/_100sdp"
                    app:cardElevation="0dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/camera"
                        android:tint="@color/white"
                        />
                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/create_profile_set_profile"
                    android:textColor="@color/light_black_v2"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/first_name"
                    android:textColor="@color/light_black_v2"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:required="true"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edit_text_background"
                    android:drawableBottom="@null"
                    android:drawablePadding="@dimen/_7sdp"
                    android:inputType="text"
                    android:padding="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/last_name"
                    android:textColor="@color/light_black_v2"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtLastName"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:required="true"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edit_text_background"
                    android:drawableBottom="@null"
                    android:drawablePadding="@dimen/_7sdp"
                    android:inputType="text"
                    android:padding="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/phone"
                    android:textColor="@color/light_black_v2"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:required="true"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edit_text_background"
                    android:drawableBottom="@null"
                    android:drawablePadding="@dimen/_7sdp"
                    android:inputType="number"
                    android:padding="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/crdLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/pink">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_15sdp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pick_your_current_location"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:src="@drawable/location"
                            android:tint="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/or"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />



                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/post_code"
                    android:textColor="@color/light_black_v2"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPostCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:required="true"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edit_text_background"
                    android:drawableBottom="@null"
                    android:drawablePadding="@dimen/_7sdp"
                    android:hint="@string/select_post_code_address"
                    android:inputType="number"
                    android:padding="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@drawable/splash_btn_shape"
                    android:padding="@dimen/_15sdp"
                    android:text="@string/otp_submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <ProgressBar
                    android:id="@+id/pbr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progressTint="@color/blue"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:indeterminate="true"
                    android:indeterminateTintMode="src_atop"
                    android:indeterminateTint="@color/pink"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>