<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_20sdp"
    android:paddingEnd="@dimen/_20sdp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_arrow"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/back_arrow"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:focusable="true" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"

            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_enter_you_mobile"
                android:textColor="@color/black"
                android:textSize="@dimen/_30sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_hello_welcome"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <!--   style="@style/Widget.MaterialComponents.Spinner.Underlined"
   -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:padding="@dimen/_14sdp"
                    app:cardBackgroundColor="@color/light_pink"

                    >

                    <include
                        layout="@layout/item_country_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        />

                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:textCursorDrawable="@color/pink"
                    android:background="@drawable/edit_text_background"
                    android:drawableBottom="@null"
                    android:drawablePadding="@dimen/_7sdp"
                    android:hint="@string/defaulte_mobile_no"
                    android:inputType="number"
                    android:letterSpacing="0.5"
                    android:maxLength="11"
                    android:padding="@dimen/_14sdp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRequestOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/splash_btn_shape"
                android:padding="@dimen/_15sdp"
                android:text="@string/login_request_otp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:background="@color/grey" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_with"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:background="@color/grey" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/CrdGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/light_pink"
                    app:cardCornerRadius="@dimen/_4sdp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:src="@drawable/google_icon" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:text="@string/google"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/light_pink"
                    app:cardCornerRadius="@dimen/_4sdp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:src="@drawable/facebook_icon" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:text="@string/facebook"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPrivactyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/login_term_privacy"
                android:textColor="#020202"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>